@@ -1,4 +1,6 @@
 master:
+ - trash-restore support relative directories specified in command line
+   fix #165
  - trash-list shows all partitions including not physical @KSR-Yasuda
    (https://github.com/andreafrancia/trash-cli/pull/178)
 
